safety service updated to E.1, MIT license removed (also from NOTICE), svn ignore, inherited uaal and maven repos removed from poms, deployed on nexus also

--- a/.gitignore
+++ b/.gitignore
@@ -349,6 +349,10 @@ safety_home/safety_home.service.client/.classpath
 safety_home/safety_home.service.client/.project
 safety_home/safety_home.service.client/.settings
 safety_home/safety_home.service.client/target
+safety_home/safety_home.service.doorBellProvider/.classpath
+safety_home/safety_home.service.doorBellProvider/.project
+safety_home/safety_home.service.doorBellProvider/.settings
+safety_home/safety_home.service.doorBellProvider/target
 safety_home/safety_home.service.humiditySensorProvider/.classpath
 safety_home/safety_home.service.humiditySensorProvider/.project
 safety_home/safety_home.service.humiditySensorProvider/.settings
