--- a/safety_home/safety_home.service.doorBellProvider/pom.xml
+++ b/safety_home/safety_home.service.doorBellProvider/pom.xml
@@ -1,26 +1,27 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion> 
- 
-  <parent>
-  	<groupId>org.universAAL.AALapplication</groupId>
-  	<artifactId>safety.pom</artifactId>
-  	<version>E.0.1-SNAPSHOT</version>
-  	<relativePath>../safety.pom/</relativePath>
-  </parent>
- 
-  <artifactId>safety_home.service.doorBellProvider</artifactId>
-  <name>Safety at Home Door Bell Provider</name>
-  <description>Safety at Home Door Bell Provider</description>
-  <packaging>bundle</packaging>
-  <inceptionYear>2012</inceptionYear>  
-  <licenses>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<artifactId>safety.pom</artifactId>
+		<version>E.1</version>
+		<relativePath>../safety.pom/</relativePath>
+	</parent>
+
+	<artifactId>safety_home.service.doorBellProvider</artifactId>
+	<name>Safety at Home Door Bell Provider</name>
+	<description>Safety at Home Door Bell Provider</description>
+	<packaging>bundle</packaging>
+	<inceptionYear>2012</inceptionYear>
+	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
 			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
 			<distribution>repo</distribution>
 		</license>
-  </licenses>
-    <dependencies>
+	</licenses>
+	<dependencies>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
@@ -32,15 +33,14 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.safety</artifactId>
-			<version>2.0.0</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.remote</groupId>
 			<artifactId>ri.internetgateway</artifactId>
-			<version>1.3.1-SNAPSHOT</version>
-		</dependency>				
+			<version>2.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
-    <build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
@@ -52,47 +52,24 @@
 						<Bundle-Activator>org.universAAL.AALapplication.safety_home.service.doorBellProvider.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>org.universAAL.AALapplication.safety_home.service.doorBellProvider, org.universAAL.AALapplication.safety_home.service.doorBellSoapClient</Export-Package>
+						<Export-Package>org.universAAL.AALapplication.safety_home.service.doorBellProvider,
+							org.universAAL.AALapplication.safety_home.service.doorBellSoapClient</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-		<repositories>
-			<repository>
-				<id>central</id>
-				<name>Central Maven Repository</name>
-				<url>http://repo1.maven.org/maven2</url>
-				<snapshots>
-					<enabled>false</enabled>
-				</snapshots>
-			</repository>
-			<repository>
-				<id>apache-snapshots</id>
-				<name>Apache Snapshots</name>
-				<url>http://people.apache.org/repo/m2-snapshot-repository</url>
-				<releases>
-					<enabled>false</enabled>
-				</releases>
-				<snapshots>
-					<updatePolicy>daily</updatePolicy>
-				</snapshots>
-			</repository>
-			<repository>
-				<id>uaal</id>
-				<name>universAAL Repositories</name>
-				<url>http://depot.universaal.org/maven-repo/releases/</url>
-				<snapshots>
-					<enabled>false</enabled>
-				</snapshots>
-			</repository>
-			<repository>
-				<id>uaal-snapshots</id>
-				<name>universAAL Snapshot Repositories</name>
-				<url>http://depot.universaal.org/maven-repo/snapshots/</url>
-				<releases>
-					<enabled>false</enabled>
-				</releases>
-			</repository>
-		</repositories>
+	<repositories>
+		<repository>
+			<id>apache-snapshots</id>
+			<name>Apache Snapshots</name>
+			<url>http://people.apache.org/repo/m2-snapshot-repository</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<updatePolicy>daily</updatePolicy>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
