--- a/safety_home/safety_home.service.server/pom.xml
+++ b/safety_home/safety_home.service.server/pom.xml
@@ -4,7 +4,7 @@
   <parent>
   	<groupId>org.universAAL.AALapplication</groupId>
   	<artifactId>safety.pom</artifactId>
-  	<version>E.0.1-SNAPSHOT</version>
+  	<version>E.1</version>
   	<relativePath>../safety.pom/</relativePath>
   </parent>
   
@@ -33,12 +33,12 @@
 		<dependency>
 			<groupId>org.universAAL.remote</groupId>
 			<artifactId>ri.internetgateway</artifactId>
-			<version>1.3.1-SNAPSHOT</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>				
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.safety</artifactId>
-			<version>2.0.0</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>		
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
