--- a/long_term_behav/ltba.ui/pom.xml
+++ b/long_term_behav/ltba.ui/pom.xml
@@ -2,26 +2,37 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>ltba.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>E.0.1-SNAPSHOT</version>
+		<artifactId>ltba.pom</artifactId>
+		<version>E.1</version>
 		<relativePath>../ltba.pom</relativePath>
 	</parent>
 	<artifactId>ltba.ui</artifactId>
+	<version>E.1</version>
 	<packaging>bundle</packaging>
 	<name>LTBA user interface.</name>
+	<description>The LTBA service user interface</description>
 	<dependencies>
 		<dependency>
-			<artifactId>ont.drools</artifactId>
-			<groupId>org.universAAL.ontology</groupId>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.osgi.core</artifactId>
+			<version>1.4.0</version>
 		</dependency>
 		<dependency>
-			<artifactId>ont.profile</artifactId>
 			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.drools</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.profile</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.context.osgi</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.bus.service.osgi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
@@ -31,19 +42,12 @@
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.ui.osgi</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.osgi.core</artifactId>
-			<!-- <version>1.4.0</version> -->
-		</dependency>
 	</dependencies>
-	<description>The LTBA service user interface.</description>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.3.7</version>
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
@@ -51,6 +55,7 @@
 						<Bundle-Activator>org.universaal.ltba.ui.activator.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Export-Package>org.universaal.ltba.ui.activator</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
@@ -76,5 +81,4 @@
 			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
 		</license>
 	</licenses>
-	<version>${parent.version}</version>
 </project>
