ltba service updated to E.1, ltba.nomhad.gateway added to modules of parent, svn ignore, unused dependencies removed, uAAL-Runtime profile created in ltba.manager.pom, unused import deleted, deployed to nexus also

--- a/.gitignore
+++ b/.gitignore
@@ -167,6 +167,7 @@ long_term_behav/ltba.pom/.settings
 long_term_behav/ltba.publisher/.classpath
 long_term_behav/ltba.publisher/.project
 long_term_behav/ltba.publisher/.settings
+long_term_behav/ltba.publisher/bin
 long_term_behav/ltba.publisher/target
 long_term_behav/ltba.ui/.classpath
 long_term_behav/ltba.ui/.project
