--- a/food_shopping/food_shopping.service.client/pom.xml
+++ b/food_shopping/food_shopping.service.client/pom.xml
@@ -4,7 +4,7 @@
    <parent>
   	<groupId>org.universAAL.AALapplication</groupId>
   	<artifactId>shopping.pom</artifactId>
-  	<version>E.0.1-SNAPSHOT</version>
+  	<version>E.1</version>
   	<relativePath>../shopping.pom/</relativePath>
   </parent>
  
@@ -25,8 +25,15 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.shopping</artifactId>
-			<version>2.0.0</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>		
+<!-- 		
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.nutrition</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+-->				
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
