--- a/food_shopping/food_shopping.service.server/pom.xml
+++ b/food_shopping/food_shopping.service.server/pom.xml
@@ -4,7 +4,7 @@
   <parent>
   	<groupId>org.universAAL.AALapplication</groupId>
   	<artifactId>shopping.pom</artifactId>
-  	<version>E.0.1-SNAPSHOT</version>
+  	<version>E.1</version>
   	<relativePath>../shopping.pom/</relativePath>
   </parent>
   
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.shopping</artifactId>
-			<version>2.0.0</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.food.database</groupId>
@@ -47,7 +47,7 @@
 			<artifactId>control.foodDevices.jd2xx_20602</artifactId>
 			<version>1.1</version>
 		</dependency>
-		
+
 <!-- 		
 		<dependency>
 			<groupId>org.universAAL.AALapplication</groupId>
