--- a/agenda/agenda.eventSelection.client/pom.xml
+++ b/agenda/agenda.eventSelection.client/pom.xml
@@ -24,10 +24,10 @@
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.osgi.compendium</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.apache.felix</groupId>-->
+<!--			<artifactId>org.osgi.compendium</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.context.osgi</artifactId>
@@ -40,14 +40,14 @@
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation.osgi</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.profile</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.agenda</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.universAAL.ontology</groupId>-->
+<!--			<artifactId>ont.profile</artifactId>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.universAAL.ontology</groupId>-->
+<!--			<artifactId>ont.agenda</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.agendaEventSelection</artifactId>
