--- a/.gitattributes
+++ b/.gitattributes
@@ -567,6 +567,32 @@ food_shopping/utils/foodShopping_v1.0.5_mw1.2.0.launch -text
 food_shopping/utils/food_shopping.properties -text
 food_shopping/utils/foodshopping_UI_mw1.3.0.launch -text
 food_shopping/utils/install.bat -text
+food_shopping/utils/shopping/images/backup/icons_add_small.png -text
+food_shopping/utils/shopping/images/backup/icons_back_small.png -text
+food_shopping/utils/shopping/images/backup/icons_browse_small.png -text
+food_shopping/utils/shopping/images/backup/icons_foodAdd_small.png -text
+food_shopping/utils/shopping/images/backup/icons_foodRemove_small.png -text
+food_shopping/utils/shopping/images/backup/icons_select_small.png -text
+food_shopping/utils/shopping/images/backup/icons_shLstBrowse_small.png -text
+food_shopping/utils/shopping/images/backup/icons_shLstCreate_small.png -text
+food_shopping/utils/shopping/images/backup/icons_shLstEdit_small.png -text
+food_shopping/utils/shopping/images/backup/icons_shLstName_small.png -text
+food_shopping/utils/shopping/images/icons_add_small.png -text
+food_shopping/utils/shopping/images/icons_back_small.png -text
+food_shopping/utils/shopping/images/icons_browse_small.png -text
+food_shopping/utils/shopping/images/icons_exit_small.png -text
+food_shopping/utils/shopping/images/icons_foodAdd_small.png -text
+food_shopping/utils/shopping/images/icons_foodRemove_small.png -text
+food_shopping/utils/shopping/images/icons_foodRepos_small.png -text
+food_shopping/utils/shopping/images/icons_help_small.png -text
+food_shopping/utils/shopping/images/icons_remove_small.png -text
+food_shopping/utils/shopping/images/icons_save_small.png -text
+food_shopping/utils/shopping/images/icons_select_small.png -text
+food_shopping/utils/shopping/images/icons_shLstBrowse_small.png -text
+food_shopping/utils/shopping/images/icons_shLstCreate_small.png -text
+food_shopping/utils/shopping/images/icons_shLstEdit_small.png -text
+food_shopping/utils/shopping/images/icons_shLstName_small.png -text
+food_shopping/utils/shopping/images/icons_shopList_small.png -text
 food_shopping/utils/ui.dm/main_menu.txt -text
 food_shopping/utils/ui.dm/main_menu_saied.txt -text
 food_shopping/utils/ui.dm/main_menu_saied_en.txt -text
