--- a/.gitattributes
+++ b/.gitattributes
@@ -3066,6 +3066,42 @@ safety_home/utils/external-jars/safety_home/commons-dbcp-1.1.jar -text
 safety_home/utils/external-jars/safety_home/commons-pool-1.1.jar -text
 safety_home/utils/external-jars/safety_home/mysql-connector-java-5.1.18-bin.jar -text
 safety_home/utils/install.bat -text
+safety_home/utils/safety/images/Kostas_Kalogirou.jpg -text
+safety_home/utils/safety/images/Nikos_Dimokas.jpg -text
+safety_home/utils/safety/images/Olga_Gkaitatzi.jpg -text
+safety_home/utils/safety/images/Paulos_Spanidis.jpg -text
+safety_home/utils/safety/images/Taxiarchis_Tsaprounis.jpg -text
+safety_home/utils/safety/images/Unknown_Person.jpg -text
+safety_home/utils/safety/images/Unknown_Person.png -text
+safety_home/utils/safety/images/backup/door_unlock.jpg -text
+safety_home/utils/safety/images/backup/door_unlock_small.jpg -text
+safety_home/utils/safety/images/closed_window.png -text
+safety_home/utils/safety/images/door_bell.png -text
+safety_home/utils/safety/images/door_close.png -text
+safety_home/utils/safety/images/door_lock.png -text
+safety_home/utils/safety/images/door_open.png -text
+safety_home/utils/safety/images/door_unlock.png -text
+safety_home/utils/safety/images/heating_off.png -text
+safety_home/utils/safety/images/heating_on.png -text
+safety_home/utils/safety/images/humidity.png -text
+safety_home/utils/safety/images/light_off.png -text
+safety_home/utils/safety/images/light_on.png -text
+safety_home/utils/safety/images/motion.png -text
+safety_home/utils/safety/images/opened_window.png -text
+safety_home/utils/safety/images/smoke.png -text
+safety_home/utils/safety/images/temperature.png -text
+safety_home/utils/safety/sounds/door_bell.wav -text
+safety_home/utils/safety/sounds/door_close.wav -text
+safety_home/utils/safety/sounds/door_close_old.wav -text
+safety_home/utils/safety/sounds/door_is_open.wav -text
+safety_home/utils/safety/sounds/door_lock.wav -text
+safety_home/utils/safety/sounds/door_open.wav -text
+safety_home/utils/safety/sounds/door_unlock.wav -text
+safety_home/utils/safety/sounds/humidity_is_over_50.wav -text
+safety_home/utils/safety/sounds/lights_are_on.wav -text
+safety_home/utils/safety/sounds/motion_detection.wav -text
+safety_home/utils/safety/sounds/smoke_detection.wav -text
+safety_home/utils/safety/sounds/window_open.wav -text
 safety_home/utils/safetyServer_v1.0.5_mw1.2.0.launch -text
 safety_home/utils/safetyServer_v1.1.0_mw1.2.1.launch -text
 safety_home/utils/safety_UI_mw1.3.0.launch -text
