food_shopping transferred to mw2.0.1-S (version update to E.1). svn ignore, also deployed on nexus. 3rd party libs to be added to nexus so manual installation will not be necessary in the future

--- a/food_shopping/shopping.pom/pom.xml
+++ b/food_shopping/shopping.pom/pom.xml
@@ -30,7 +30,7 @@
   	<developerConnection>scm:svn:http://forge.universaal.org/svn/new_services/trunk/food_shopping</developerConnection>
   </scm>
   <modules>
-  	<module>../ont.shopping</module>
+<!--  	<module>../ont.shopping</module>-->
   	<module>../food_shopping.service.RFidProvider</module>
   	<module>../food_shopping.service.client</module>
   	<module>../food_shopping.service.server</module>
