--- a/food_shopping/food_shopping.service.RFidProvider/pom.xml
+++ b/food_shopping/food_shopping.service.RFidProvider/pom.xml
@@ -1,65 +1,58 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  
-  <parent>
-  	<groupId>org.universAAL.AALapplication</groupId>
-  	<artifactId>food_shopping.pom</artifactId>
-  	<version>C.0.5-SNAPSHOT</version>
-  	<relativePath>../pom/</relativePath>
-  </parent>
-  
-  <groupId>org.universAAL.AALapplication</groupId>
-  <artifactId>food_shopping.service.RFidProvider</artifactId>
-  <version>1.0.6-SNAPSHOT</version>
-  <name>RFid Reader Provider</name>
-  <description>RFid Reader Provider</description>
-  <packaging>bundle</packaging>
-    <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<artifactId>shopping.pom</artifactId>
+		<version>E.1</version>
+		<relativePath>../shopping.pom/</relativePath>
+	</parent>
+
+	<artifactId>food_shopping.service.RFidProvider</artifactId>
+	<version>E.1</version>
+	<name>RFid Reader Provider</name>
+	<description>RFid Reader Provider</description>
+	<packaging>bundle</packaging>
+	<dependencies>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
-			<version>1.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation.osgi</artifactId>
-			<!-- <version>1.2.0</version> -->
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.model.osgi</artifactId>
-			<!-- <version>1.2.0</version> -->
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.container.xfaces.osgi</artifactId>
-			<!-- <version>1.2.0</version> -->
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.container.osgi</artifactId>
-			<!-- <version>1.2.0</version> -->
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.context.osgi</artifactId>
-			<!-- <version>1.2.0</version> -->
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.service.osgi</artifactId>
-			<!-- <version>1.2.0</version> -->
 		</dependency>
 		<dependency>
-			<groupId>org.universAAL.AALapplication</groupId>
-			<artifactId>ont.Shopping</artifactId>
-			<version>1.0.6-SNAPSHOT</version>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.shopping</artifactId>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.food.database</groupId>
 			<artifactId>mysql.connector.java</artifactId>
 			<version>5.1.18</version>
-		</dependency>	
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.control.foodDevices.RFid</groupId>
 			<artifactId>control.foodDevices.MetratecReaderLibrary</artifactId>
@@ -76,7 +69,7 @@
 			<version>1.1</version>
 		</dependency>
 	</dependencies>
-    <build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
