--- a/.gitignore
+++ b/.gitignore
@@ -77,8 +77,10 @@ common/contact_manager/contact.manager.service/*.iml
 common/contact_manager/contact.manager.service/target
 common/contact_manager/contact.manager.shell.commands/*.iml
 common/contact_manager/contact.manager.shell.commands/target
+food_shopping/food_shopping.service.RFidProvider/.classpath
 food_shopping/food_shopping.service.RFidProvider/.project
 food_shopping/food_shopping.service.RFidProvider/.settings
+food_shopping/food_shopping.service.RFidProvider/target
 food_shopping/food_shopping.service.client/.classpath
 food_shopping/food_shopping.service.client/.project
 food_shopping/food_shopping.service.client/.settings
