--- a/nutritional/nutritional.client/pom.xml
+++ b/nutritional/nutritional.client/pom.xml
@@ -49,6 +49,10 @@
 			<artifactId>ont.nutrition</artifactId>
 			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		<groupId>org.universAAL.ontology</groupId>
+		<artifactId>ont.recommendations</artifactId>
+		</dependency>
 
 		<!-- Nutritional own libs -->
 		<dependency>
@@ -111,7 +115,7 @@
 							org.universAAL.middleware.util, org.universAAL.ontology.medMgr,
 							org.universAAL.ontology.nutrition,
 							org.universAAL.ontology.nutrition.profile,
-							org.universAAL.ontology.profile, org.xml.sax
+							org.universAAL.ontology.profile, org.xml.sax, org.universAAL.ontology.recommendations
 						</Import-Package>
 					</instructions>
 				</configuration>
