--- a/aal_eficiency/FitbitPublisher/pom.xml
+++ b/aal_eficiency/FitbitPublisher/pom.xml
@@ -4,13 +4,13 @@
   <parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>D.3</version>
+		<version>E.0</version>
 		<relativePath>../new_services.pom/pom.xml</relativePath>
 	</parent>
   
   <artifactId>FitbitPublisher</artifactId>
-  <name></name>
-  <version>D.3.1-SNAPSHOT</version>
+  <name>uAAL Fitbit Scores Publisher</name>
+  <version>E.0.1-SNAPSHOT</version>
   <description/>
 	<packaging>bundle</packaging>
 	<dependencies>
