--- a/aal_eficiency/EnergyReaderPublisher/pom.xml
+++ b/aal_eficiency/EnergyReaderPublisher/pom.xml
@@ -4,8 +4,8 @@
   <parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>E.0</version>
-		<relativePath>../new_services.pom/pom.xml</relativePath>
+		<version>E.1</version>
+		<relativePath>../../new_services.pom/pom.xml</relativePath>
 	</parent>
   
   <artifactId>EnergyReaderPublisher</artifactId>
