--- a/medication/medication.manager.configuration/src/main/resources/medication.properties
+++ b/medication/medication.manager.configuration/src/main/resources/medication.properties
@@ -4,7 +4,7 @@ medication.manager.intake.interval=1
 medication.manager.http.session.expire.timeout.in.minutes=60
 medication.manager.http.session.timer.checker.interval.in.minutes=5
 medication.manager.debug.write.file=false
-medication.manager.health.treatment.service.mocked=false
+medication.manager.health.treatment.service.mocked=true
 medication.manager.load.prescriptionsdtos=false
 medication.manager.insert.dummy.users.into.che=true
 medication.manager.issuer.interval.minutes=60
