--- a/nutritional/nutritional.karaf.feature/pom.xml
+++ b/nutritional/nutritional.karaf.feature/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>nutritional.karaf.feature</artifactId>
 	<name>Nutritional Advisor AAL Service Karaf Feature</name>
 	<description>Artifact representing representing the Karaf feature for the Nutritional Advisor AAL Service</description>
-
+	<version>2.0.1-SNAPSHOT</version>
   <build>
     <!--resources>
        <resource>
