added ont.medication module to the pom file

--- a/medication/medication.manager.pom/pom.xml
+++ b/medication/medication.manager.pom/pom.xml
@@ -57,7 +57,7 @@
   <modules>
     <module>../medication.manager.configuration</module>
     <module>../medication.manager.persistence</module>
-    <!--<module>../../ontologies/ont.medication</module>-->
+    <module>../../ontologies/ont.medication</module>
     <module>../medication.manager.service</module>
     <module>../medication.manager.shell.commands</module>
     <module>../medication.missing.services.simulation</module>
