--- a/medication/medication.manager.karaf.feature/pom.xml
+++ b/medication/medication.manager.karaf.feature/pom.xml
@@ -1,44 +1,21 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+ <?xml version="1.0"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>mw.pom.osgi</artifactId>
-    <groupId>org.universAAL.middleware</groupId>
-    <version>1.3.2-SNAPSHOT</version>
-  </parent>
-
-  <groupId>org.universAAL.AALapplication</groupId>
+	<parent>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<artifactId>medication.manager.pom</artifactId>
+		<version>E.1-SNAPSHOT</version>
+		<relativePath>../medication.manager.pom/pom.xml</relativePath>
+	</parent>
   <artifactId>medication.manager.karaf.feature</artifactId>
   <packaging>jar</packaging>
-  <version>E.0-SNAPSHOT</version>
+  <version>2.0.1-SNAPSHOT</version>
   <name>Medication Manager Karaf Feature</name>
-
-  <properties>
-    <commons-beanutils-version>1.8.3</commons-beanutils-version>
-    <commons-codec-version>1.4</commons-codec-version>
-    <felix-version>2.0.1</felix-version>
-    <project.build.sourceEncoding>cp1252</project.build.sourceEncoding>
-  </properties>
-
-  <dependencies>
-    <dependency>
-      <groupId>commons-beanutils</groupId>
-      <artifactId>commons-beanutils-core</artifactId>
-      <version>${commons-beanutils-version}</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
-      <version>${commons-codec-version}</version>
-    </dependency>
-  </dependencies>
-
   <build>
-    <plugins>
+  <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>2.6</version>
         <executions>
           <execution>
             <id>copy-features</id>
@@ -50,7 +27,7 @@
               <outputDirectory>target/features</outputDirectory>
               <resources>
                 <resource>
-                  <directory>src/main/features</directory>
+                  <directory>src/features</directory>
                   <filtering>true</filtering>
                 </resource>
               </resources>
@@ -61,7 +38,6 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
-        <version>1.7</version>
         <executions>
           <execution>
             <id>attach-artifacts</id>
@@ -72,7 +48,7 @@
             <configuration>
               <artifacts>
                 <artifact>
-                  <file>src/features/universAAL-MedicationManager.xml</file>
+                  <file>target/features/universAAL-MedicationManager.xml</file>
                   <type>xml</type>
                   <classifier>features</classifier>
                 </artifact>
@@ -82,5 +58,5 @@
         </executions>
       </plugin>
     </plugins>
-  </build>
+    </build>
 </project>
