--- a/medication/medication.manager.servlet.ui/pom.xml
+++ b/medication/medication.manager.servlet.ui/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>medication.manager.pom</artifactId>
-    <version>E.0-SNAPSHOT</version>
+    <version>E.1-SNAPSHOT</version>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
 
@@ -21,28 +21,28 @@
       <artifactId>mw.container.osgi</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.5</version>
-    </dependency>
+<!--     <dependency> -->
+<!--       <groupId>javax.servlet</groupId> -->
+<!--       <artifactId>servlet-api</artifactId> -->
+<!--       <version>2.5</version> -->
+<!--     </dependency> -->
 
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.persistence</artifactId>
-      <version>E.0-SNAPSHOT</version>
+      <version>E.1-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.servlet.ui.base</artifactId>
-      <version>E.0-SNAPSHOT</version>
+      <version>E.1-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.missing.services.simulation</artifactId>
-      <version>E.0-SNAPSHOT</version>
+      <version>E.1-SNAPSHOT</version>
     </dependency>
 
   </dependencies>
