--- a/medication/medication.missing.services.simulation/pom.xml
+++ b/medication/medication.missing.services.simulation/pom.xml
@@ -3,13 +3,13 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
-    <version>E.0-SNAPSHOT</version>
+    <version>E.1-SNAPSHOT</version>
     <artifactId>medication.manager.pom</artifactId>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
   <artifactId>medication.missing.services.simulation</artifactId>
   <name>Missing UniversAAL Services simulation</name>
-  <description>Simulating missing real universAALservices evnts, calls, etc.</description>
+  <description>Simulating missing real universAALservices events, calls, etc.</description>
   <packaging>bundle</packaging>
 
 
@@ -17,13 +17,13 @@
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.medication</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.1-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.persistence</artifactId>
-      <version>E.0-SNAPSHOT</version>
+      <version>E.1-SNAPSHOT</version>
     </dependency>
 
   </dependencies>
